scss/_forms.scss
.form-group {
  @include clearfix();
  margin-bottom: $spacer;
}


.form-label {
  &.disabled {
    color: $gray;
  }
}

.form-field {
  display: block;
  width: 100%;
  padding: $form-padding-top $form-padding-horizontal $form-padding-bottom;
  border: $form-border-width solid $gray-lighter;
  font-size: $form-font-size;
  line-height: $form-line-height;
  white-space: nowrap;
  text-overflow: ellipsis;
  transition: all $transition-fast;
  height: $form-height;

  &,
  &:placeholder-shown {
  }

  // @FIXME we need a more noticeable focus indicator
  &:focus,
  &.focus {
    border-color: transparent;
    outline: none;
    box-shadow: $shadow-hover;
  }

  &:disabled,
  &.disabled {
    background-color: #f2f2f2; // @TODO: replace with light gray from palette
    box-shadow: none;
    cursor: not-allowed;
  }
}

.has-error {
  .form-field {
    border-color: $coral;
  }

  .field-msg {
    display: block;
    position: relative;
    padding: $field-msg-padding-vertical $field-msg-padding-horizontal $field-msg-padding-vertical ($field-msg-icon-size + ($field-msg-padding-horizontal * 1.5));
    margin-bottom: $field-msg-shadow-height * 2;  // Compensate for box shadow below
    color: #fff;
    font-size: $field-msg-font-size;
    line-height: $field-msg-line-height;
    background-color: $coral;
    box-shadow: 0 $field-msg-shadow-height 0 0 transparentize($coral, .40),
                0 ($field-msg-shadow-height * 2) 0 0 transparentize($coral, .5);

    &::before {
      @extend .icon;

      position: absolute;
      top: 50%;
      left: $field-msg-padding-horizontal;
      margin-top: -($field-msg-icon-size / 2);
      content: map-get($_icons-map, 'disabled');
      font-size: $field-msg-icon-size;
      line-height: $field-msg-line-height;
    }
  }
}


///
/// Checkbox and Radio controls
///

[type='checkbox'],
[type='radio'] {
  position: absolute;
  opacity: 0;
  + .control-label {
    display: inline-block;
    // margin-left: $spacer;
    // margin-right: $spacer;

    &::before {
      @extend .icon;

      display: inline-block;
      content: '';
      width: $checkbox-size;
      height: $checkbox-size;
      border: $checkbox-border;
      margin-right: $checkbox-size / 2;
      margin-bottom: -.125rem;  // ~2px
      line-height: .7;
      background-color: $body-bg;
      transition: all $transition-fast;
    }
  }

  &:hover + .control-label::before {
    box-shadow: $shadow-hover;
  }

  &:active + .control-label::before {
    box-shadow: $shadow-active;
  }

  &:disabled {
    &,
    + .control-label,
    + .control-label::before {
      color: lighten($charcoal, 40%);
      cursor: not-allowed;
    }
    + .control-label::before,
    &:hover + .control-label::before {
      background-color: lighten($gray, 10%);
      box-shadow: none;
    }
  }
}

input[type="checkbox"] {
  &:checked + .control-label:before {
    content: map-get($_icons-map, qualified); // 'qualified' checkmark
  }
}

input[type="radio"] {
  + .control-label {
    &:before {
      border-radius: 50%;
    }
  }
  &:checked + .control-label:before {
    background-color: $charcoal;
    box-shadow: inset 0 0 0 2px #fff;
  }
}

